# llvm-passes-travel

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  env.sh
MBA/: CMakeLists.txt  MBA.cpp
alias-analysis/: .gitignore  Makefile  alias_analysis.cpp  alias_analysis.h  foo.ll  icpp.ll  icpp2.ll  icpp3.ll  run.sh
hello-world/: Makefile  hw1.cpp  run.sh  test.c  test.ll
inject_func/: Makefile  inject_func_call.cpp  inject_func_call.h  lab-pc.mk  run.sh  test.c  test.h  test.ll
inputs/: input_for_mba_sub.c  test.ll
lib/: inject_func.cpp  inject_func.h
loop-tailing/: LoopTailing.cpp  LoopTailing.h  Makefile  run.sh  test.c  test.ll  test_opt.ll
